{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "6a64f794-c6ef-4890-aa92-6ca89853dc5e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b1a6ac8f-1787-44f8-80c9-e803b35170ef",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2401c838-8c1a-4886-88eb-583e65c1624f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "340e6b52-c965-4283-85a2-e08260d23a9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Value",
                    "id": "9705fcf7-fa72-4ce7-b72b-7e13c6f2d2ba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6158370b-2db8-4276-9b56-2dded4d6f1d0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4025a839-cd74-4261-af76-1f8dd29e027f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e3f63715-9aaf-48c3-ba61-81b4026d10a8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f521bbd1-ebe0-4d15-9f99-ad674198774a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "aebfd560-b29c-4572-be48-36ff70dd8a09",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aca242ba-c486-4c22-b625-fc084af2f6b9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "NormalizeVector2,StickDeadzone",
                    "groups": "Controller",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25682571-4928-418f-92f4-210054f9d4b8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0283bb96-270a-4a47-bdb0-bf62f9081c2c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ff7656c-34fd-48f0-8d89-a64d751f284a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "40a5f4a5-e7ea-4173-a3b6-ba93c8d287d8",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "42b4ba2d-a4df-4052-b407-06c668147786",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "75d51ee8-7d68-40b2-9779-d5760b66a50e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "Keyboard",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "153c20ef-c407-4da7-a375-83a18c6d8648",
                    "path": "<Gamepad>/start",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2e060e3-795b-4767-af16-d2263753b9b3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}